--- a/assets_dev/localizations/localizations-PSEUDO.csv
+++ b/assets_dev/localizations/localizations-PSEUDO.csv
@@ -1,2 +1,7 @@
 keys;en;de
-appTitle;Chat Messenger;[ Chat Messenger ÜẞÖüüü ]
+appTitle;Chat Messenger;[ Chat Messenger ßẞÜẞßÄ ]
+signinScreenNickname;Nickname;[ Nickname öÄẞä ]
+signinScreenSigininButtonLabel;Signin;[ Signin äÄä ]
+signinScreenAdaptiveErrorDialogTitle;Error;[ Errör üÖÖ ]
+signinScreenAdaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ÖßßÜäöüÜüẞüü ]
+signinScreenAdaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain äÄüää ]
