--- a/assets_dev/localizations/localizations.csv
+++ b/assets_dev/localizations/localizations.csv
@@ -1,2 +1,7 @@
 keys;en
 appTitle;Chat Messenger
+signinScreenNickname;Nickname
+signinScreenSigininButtonLabel;Signin
+signinScreenAdaptiveErrorDialogTitle;Error
+signinScreenAdaptiveErrorDialogContent;Something went wrong. Please try again.
+signinScreenAdaptiveErrorDialogButtonLabel;Try Again
