--- a/assets_dev/localizations/localizations-PSEUDO.csv
+++ b/assets_dev/localizations/localizations-PSEUDO.csv
@@ -1,7 +1,7 @@
 keys;en;de
-appTitle;Chat Messenger;[ Chat Messenger ßẞÜẞßÄ ]
-signinScreenNickname;Nickname;[ Nickname öÄẞä ]
-signinScreenSigininButtonLabel;Signin;[ Signin äÄä ]
-signinScreenAdaptiveErrorDialogTitle;Error;[ Errör üÖÖ ]
-signinScreenAdaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ÖßßÜäöüÜüẞüü ]
-signinScreenAdaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain äÄüää ]
+appTitle;Chat Messenger;[ Chat Messenger öööüßÜ ]
+signinScreenNickname;Nickname;[ Nickname ääÜß ]
+signinScreenSigininButtonLabel;Signin;[ Signin ẞßẞ ]
+adaptiveErrorDialogTitle;Error;[ Errör Äßü ]
+adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ääÜüẞöÄäẞßÖä ]
+adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain ẞöẞäÖ ]
