Feature/sign in screen (#10)
Resolves #9.

Commits:

* Added AppColors.
* Created SigninScreen.
* POC SigninScreen.
* Added mobx package and flutter_secure_storage.
* Added SigninScreenStore.
* Added GestureDetector to dismiss keyboard when the user taps outside of the TextField.
* Changed the size of an OtlineButton.
* Added DeviceStorage to save information if the user is signed.
* Added Podfile.
* POC SigninScreen, ChatroomScreen.
* Added ModalProgressIndicator.
* Added AdaptiveErrorDialog.
* Added store as proxy dependency.
* Updated localizations.
* UI tweaks.
* Updated localizations.
* Updated SigninScreenStore.
* Refactored HomeScreen.
* Updated main.dart with new HomeScreen.

--- a/assets_dev/localizations/localizations-PSEUDO.csv
+++ b/assets_dev/localizations/localizations-PSEUDO.csv
@@ -1,2 +1,7 @@
 keys;en;de
-appTitle;Chat Messenger;[ Chat Messenger ÜẞÖüüü ]
+appTitle;Chat Messenger;[ Chat Messenger öööüßÜ ]
+signinScreenNickname;Nickname;[ Nickname ääÜß ]
+signinScreenSigininButtonLabel;Signin;[ Signin ẞßẞ ]
+adaptiveErrorDialogTitle;Error;[ Errör Äßü ]
+adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ääÜüẞöÄäẞßÖä ]
+adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain ẞöẞäÖ ]
