--- a/assets_dev/localizations/localizations-PSEUDO.csv
+++ b/assets_dev/localizations/localizations-PSEUDO.csv
@@ -1,7 +1,9 @@
 keys;en;de
-appTitle;Chat Messenger;[ Chat Messenger öööüßÜ ]
-signinScreenNickname;Nickname;[ Nickname ääÜß ]
-signinScreenSigininButtonLabel;Signin;[ Signin ẞßẞ ]
-adaptiveErrorDialogTitle;Error;[ Errör Äßü ]
-adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ääÜüẞöÄäẞßÖä ]
-adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain ẞöẞäÖ ]
+appTitle;Chat Messenger;[ Chat Messenger ßßäßÄü ]
+signinScreenNickname;Nickname;[ Nickname öööẞ ]
+signinScreenSigininButtonLabel;Signin;[ Signin öÜß ]
+adaptiveErrorDialogTitle;Error;[ Errör äÄü ]
+adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ẞÜẞööẞÄÜüÜäö ]
+adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain ÄüÖÄÜ ]
+chatroomLoginButton;Login;[ Lögin ÖÄÖ ]
+chatroomSendMessageButton;Send;[ Send ßÖ ]
