--- a/assets_dev/localizations/localizations-PSEUDO.csv
+++ b/assets_dev/localizations/localizations-PSEUDO.csv
@@ -1,9 +1,9 @@
 keys;en;de
-appTitle;Chat Messenger;[ Chat Messenger ßßäßÄü ]
-signinScreenNickname;Nickname;[ Nickname öööẞ ]
-signinScreenSigininButtonLabel;Signin;[ Signin öÜß ]
-adaptiveErrorDialogTitle;Error;[ Errör äÄü ]
-adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ẞÜẞööẞÄÜüÜäö ]
-adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain ÄüÖÄÜ ]
-chatroomLoginButton;Login;[ Lögin ÖÄÖ ]
-chatroomSendMessageButton;Send;[ Send ßÖ ]
+appTitle;Chat Messenger;[ Chat Messenger üÜüäÄß ]
+signinScreenNickname;Nickname;[ Nickname Öüüö ]
+signinScreenSigininButtonLabel;Signin;[ Signin üÖö ]
+adaptiveErrorDialogTitle;Error;[ Errör üÜẞ ]
+adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ÄööÖẞÜßäßÖöẞ ]
+adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain ÄÖüöÄ ]
+chatroomLogoutButton;Logout;[ Lögöüt ßßü ]
+chatroomSendMessageButton;Send;[ Send üÄ ]
