Feature/sed and receive messages (#14)
Resolves #13

Commits:

* Added cloud_firestore package.
* Added an interface IChatService.
* Updated IChatService.
* Added firebase implementation of IChatSevice.
* Added provider of IChatservice.
* Moved ChatroomScreen.
* Updated localization.
* Updated localizations.
* Updated IChatService.
* Removed TODO.
* POC send message from ChatroomScreen.
* Added messageStream() method to FirebaseChatService.
* Added uuid package.
* Receiving messages POC.
* Fully working POC.

--- a/assets_dev/localizations/localizations-PSEUDO.csv
+++ b/assets_dev/localizations/localizations-PSEUDO.csv
@@ -1,7 +1,9 @@
 keys;en;de
-appTitle;Chat Messenger;[ Chat Messenger öööüßÜ ]
-signinScreenNickname;Nickname;[ Nickname ääÜß ]
-signinScreenSigininButtonLabel;Signin;[ Signin ẞßẞ ]
-adaptiveErrorDialogTitle;Error;[ Errör Äßü ]
-adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ääÜüẞöÄäẞßÖä ]
-adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain ẞöẞäÖ ]
+appTitle;Chat Messenger;[ Chat Messenger üÜüäÄß ]
+signinScreenNickname;Nickname;[ Nickname Öüüö ]
+signinScreenSigininButtonLabel;Signin;[ Signin üÖö ]
+adaptiveErrorDialogTitle;Error;[ Errör üÜẞ ]
+adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ÄööÖẞÜßäßÖöẞ ]
+adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain ÄÖüöÄ ]
+chatroomLogoutButton;Logout;[ Lögöüt ßßü ]
+chatroomSendMessageButton;Send;[ Send üÄ ]
