--- a/assets_dev/localizations/localizations-PSEUDO.csv
+++ b/assets_dev/localizations/localizations-PSEUDO.csv
@@ -1,9 +1,10 @@
 keys;en;de
-appTitle;Chat Messenger;[ Chat Messenger üÜüäÄß ]
-signinScreenNickname;Nickname;[ Nickname Öüüö ]
-signinScreenSigininButtonLabel;Signin;[ Signin üÖö ]
-adaptiveErrorDialogTitle;Error;[ Errör üÜẞ ]
-adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. ÄööÖẞÜßäßÖöẞ ]
-adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain ÄÖüöÄ ]
-chatroomLogoutButton;Logout;[ Lögöüt ßßü ]
-chatroomSendMessageButton;Send;[ Send üÄ ]
+appTitle;Chat Messenger;[ Chat Messenger üÜößẞÖ ]
+signinScreenNickname;Nickname;[ Nickname Öäßü ]
+signinScreenSigininButtonLabel;Signin;[ Signin ßßÜ ]
+adaptiveErrorDialogTitle;Error;[ Errör ÜÄÄ ]
+adaptiveErrorDialogContent;Something went wrong. Please try again.;[ Sömething went wröng. Please try again. üẞäÄßöääẞÖÖä ]
+adaptiveErrorDialogButtonLabel;Try Again;[ Try Ägain öÖäÜÖ ]
+chatroomLogoutButton;Logout;[ Lögöüt ääÄ ]
+chatroomSendMessageButton;Send;[ Send ÖÜ ]
+chatTextFieldSendMessageHintText;Type your message here.;[ Type yöür message here. ÜöüÄßÖÜ ]
