--- a/assets_dev/localizations/localizations.csv
+++ b/assets_dev/localizations/localizations.csv
@@ -7,3 +7,4 @@ adaptiveErrorDialogContent;Something went wrong. Please try again.
 adaptiveErrorDialogButtonLabel;Try Again
 chatroomLogoutButton;Logout
 chatroomSendMessageButton;Send
+chatTextFieldSendMessageHintText;Type your message here.
